--- a/style.css
+++ b/style.css
@@ -1,27 +1,41 @@
 body {
   font-family: Arial;
+  margin-top: 50px;
 }
 
-h1 {
-  margin: 0;
+a {
+  color: black;
 }
 
-.project-div {
-  margin-bottom: 35px;
+.td-center {
+  text-align: center;
 }
 
-p span {
-  color: #aaa;
-  font-size: 0.8em;
+.odd td, .even td{
+  border-bottom: 1px solid black;
 }
 
-div.hr {
+tr:last-child td {
+  border: 0;
+}
+
+#results_filter {
+  position: fixed;
+  top: 10px;
+  right: 10px;
+  z-index: 999;
+  color: white;
+}
+
+#filters {
+  position: fixed;
+  top: 0;
+  left: 0;
+  padding-top: 10px;
+  padding-left: 10px;
+  padding-bottom: 10px;
+  z-index: 999;
   width: 100%;
-  height: 10px;
-}
-
-p.additional {
-  font-size: 0.9em;
-  font-style: italic;
-  color: #aaa;
+  background: black;
+  color: white;
 }
